<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Supcrowdfunder-Android</string>

    <string name="categoryTitle">Projets de cette catégorie</string>
    <string name="contributeButton">Contribuer</string>
    <string name="contributeAmount">Montant : </string>
    <string name="contributeHint">Montant en €</string>
    <string name="contributeThanks1">Vous aller contribuer au projet : </string>
    <string name="contributeThanks2">, le créateur du projet vous remercie, pour votre participation.</string>
    <string name="contributeTitle">Contribuer à un projet</string>
    <string name="contributeAlertContent">Vous aller faire une contribution de :</string>
    <string name="contributeAlertTitle">Confirmation de contribution</string>
    <string name="contributeToastValidate">Contribution ajoutée</string>
    <string name="contributeToastCancel">Contribution annulée</string>
    <string name="contributeToastEmpty">Le montant est vide</string>
    <string name="contributeToastInvalid">Le montant doit être supérieur à 0</string>

    <string name="registrationTitle">Inscription</string>
    <string name="registrationEmail">E-mail : </string>
    <string name="registrationEmailHint">E-mail</string>
    <string name="registrationPassword">Mot de passe : </string>
    <string name="registrationPasswordHint">Mot de passe</string>
    <string name="registrationPasswordConfirm">Confirmation : </string>
    <string name="registrationPasswordConfirmHint">Mot de passe (Confirmation)</string>
    <string name="registrationFirstname">Prénom : </string>
    <string name="registrationFirstnameConfirm">Prénom</string>
    <string name="registrationLastname">Nom : </string>
    <string name="registrationLastnameHint">Nom</string>
    <string name="registrationSubmit">S\'inscrire</string>
    <string name="registrationSuccess">Merci de votre inscription.</string>

    <string name="edituserTitle">Modifier son profil</string>
    <string name="edituserEmail">E-mail : </string>
    <string name="edituserEmailHint">E-mail</string>
    <string name="edituserPassword">Mot de passe : </string>
    <string name="edituserPasswordHint">Mot de passe</string>
    <string name="edituserPasswordConfirm">Confirmation : </string>
    <string name="edituserPasswordConfirmHint">Mot de passe (Confirmation)</string>
    <string name="edituserFirstname">Prénom : </string>
    <string name="edituserFirstnameConfirm">Prénom</string>
    <string name="edituserLastname">Nom : </string>
    <string name="edituserLastnameHint">Nom</string>
    <string name="edituserAddress">Adresse : </string>
    <string name="edituserAddressHint">Adresse</string>
    <string name="edituserCity">Ville : </string>
    <string name="edituserCityHint">Ville</string>
    <string name="edituserZipCode">Code postal : </string>
    <string name="edituserZipCodeHint">Code postal</string>
    <string name="edituserSex">Sex : </string>
    <string name="edituserSubmit">Editer</string>
    <string name="edituserSuccess">Votre utilisateur a bien été sauvegardé.</string>

    <string name="viewuserTitle">Voir son profil</string>
    <string name="viewuserEmail">E-mail : </string>
    <string name="viewuserFirstname">Prénom : </string>
    <string name="viewuserLastname">Nom : </string>
    <string name="viewuserAddress">Adresse : </string>
    <string name="viewuserZipCode">Code postal : </string>
    <string name="viewuserCity">Ville : </string>
    <string name="viewuserAdmin">Administrateur ? </string>
    <string name="viewuserCreatedAt">Created At : </string>
    <string name="viewuserSex">Sexe : </string>
    <string name="viewuserSexMen">Homme</string>
    <string name="viewuserSexGirl">Femme</string>

    <string name="loginTitle">Connexion</string>
    <string name="loginEmail">E-mail : </string>
    <string name="loginEmailHint">E-mail</string>
    <string name="loginPassword">Mot de passe : </string>
    <string name="loginPasswordHint">Mot de passe</string>
    <string name="loginSubmit">Se connecter</string>
    <string name="loginSuccess">Vous êtes bien connecté.</string>

    <string name="indexTitle">Liste des projets</string>
    <string name="projectView">Voir</string>

    <string name="projectNeedCredits">Fonds nécessaire</string>
    <string name="projectActualCredits">Fonds actuels</string>
    <string name="projectCreatedAt">Crée le</string>
    <string name="projectTerm">Date d\'échéance</string>
    <string name="projectCreator">Créateur</string>
    <string name="projectDescription">Description :</string>
    <string name="projectPercentage">Pourcentage d\'avancement</string>
    <string name="projectButton">Participer</string>

    <string name="addProjectTitle">Ajouter un projet</string>
    <string name="addProjectName">Nom du projet</string>
    <string name="addProjectNameHint">Nom du projet</string>
    <string name="addProjectNeedCredits">Fonds désirés</string>
    <string name="addProjectNeedCreditsHint">€</string>
    <string name="addProjectDescription">Description</string>
    <string name="addProjectCategory">Catégorie</string>
    <string name="addProjectTerm">Date d\'échéance</string>
    <string name="addProjectButton">Envoyer</string>
    <string name="addProjectSuccess">Projet crée</string>

    <string name="restError">Une erreur est survenue.</string>
    <string name="validate">Confirmer</string>
    <string name="cancel">Annuler</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <string name="menuIndex">Index</string>
    <string name="menuUser">Utilisateur</string>
    <string name="menuLogin">Connexion</string>
    <string name="menuLogout">Déconnexion</string>
    <string name="menuRegister">Inscription</string>
    <string name="menuViewProfile">Voir le profil</string>
    <string name="menuEditProfile">Modifier le profil</string>
</resources>