<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuIndex"
          android:title="@string/menuIndex" />
    <item android:id="@+id/menuUser"
          android:title="@string/menuUser">
        <menu android:id="@+id/sousmenu">
            <item android:id="@+id/menuLogin"
                  android:title="@string/menuLogin"   />
            <item android:id="@+id/menuLogout"
                  android:title="@string/menuLogout"  />
            <item android:id="@+id/menuRegister"
                  android:title="@string/menuRegister"  />
            <item android:id="@+id/menuViewProfile"
                  android:title="@string/menuViewProfile"  />
            <item android:id="@+id/menuEditProfile"
                  android:title="@string/menuEditProfile"  />
        </menu>
    </item>
</menu>

