<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/edituserTitle"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserEmail"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserEmailHint"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserPassword"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserPasswordHint"
                android:inputType="textPassword"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserPasswordConfirm"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserPasswordConfirmHint"
                android:inputType="textPassword"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserSex"
                android:textStyle="bold"
                android:gravity="center"
                />
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edituserSex"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserFirstname"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserFirstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserFirstnameConfirm"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserLastname"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserLastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserLastnameHint"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserAddress"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserAddressHint"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserZipCode"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserZipCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserZipCodeHint"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edituserCity"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/edituserCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituserCityHint"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <Button
            android:id="@+id/edituserSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edituserSubmit" />
</LinearLayout>