<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registrationTitle"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrationEmail"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/registrationEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/registrationEmailHint"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrationPassword"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/registrationPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/registrationPasswordHint"
                android:inputType="textPassword"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrationPasswordConfirm"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/registrationPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/registrationPasswordConfirmHint"
                android:inputType="textPassword"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrationFirstname"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/registrationFirstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/registrationFirstnameConfirm"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrationLastname"
                android:textStyle="bold"
                android:gravity="center"
                />
        <EditText
                android:id="@+id/registrationLastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/registrationLastnameHint"
                android:inputType="text"
                android:layout_weight="1"
                />
    </LinearLayout>
    <Button
            android:id="@+id/registrationSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrationSubmit" />
</LinearLayout>