<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:context=".activity.ViewUserActivity">
    <TableLayout
            android:id="@+id/projectTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_alignParentTop="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/viewuserTitle"
                android:layout_gravity="center_horizontal"/>
        <TableRow>
            <TextView
                    android:text="@string/viewuserEmail"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserEmail"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserSex"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserSex"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserFirstname"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserFirstname"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserLastname"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserLastname"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserAddress"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserAddress"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserZipCode"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserZipCode"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserCity"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserCity"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserAdmin"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserAdmin"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/viewuserCreatedAt"
                    android:layout_column="1"
                    android:padding="3dp"
                    />
            <TextView
                    android:id="@+id/viewUserCreatedAt"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />
        </TableRow>
        <View
                android:layout_height="3dip"
                android:background="#FF909090"
                />
    </TableLayout>
</RelativeLayout>